[project]
name = "dddpy"
version = "0.10.0"
description = "An example of Python FastAPI Domain-Driven Design and Onion Architecture."
authors = [{ name = "iktakahiro", email = "takahiro.ikeuchi@gmail.com" }]
dependencies = [
    "sqlalchemy==2.0.39",
    "fastapi[standard]==0.115.1",
    "shortuuid==1.0.13",
]
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = ["mypy>=1.15.0", "pytest>=8.3.5", "ruff>=0.11.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["dddpy"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "TID",
    "C4",
    "UP",
    "N",
    "B",
    "C90",
    "TC",
    "TID",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "PIE",
    "PERF",
]
ignore = ["E501", "B008", "TC003"]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
